externalDNS/ApiGateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "api.pollination.cloud"
  - port:
      number: 5432
      name: postgres
      protocol: TCP
    hosts:
    - "*"
